third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_global_bad5.exp

Diagnostics:
error: cannot mutably borrow global `A::T` since other references exists
  ┌─ tests/reference-safety/v1-tests/borrow_global_bad5.move:9:22
  │
8 │         let t1_ref = if (b) borrow_global_mut<T>(sender) else &mut t;
  │                             ---------------------------- previous mutable global borrow
9 │         let t2_ref = borrow_global_mut<T>(sender);
  │                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow attempted here
